version/0.27/_sources/api/solver/_autosummary/settings/graphics.rst.txt
:orphan:

.. _graphics:

graphics
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.graphics
    :show-inheritance:

.. rubric:: Attributes

==============================================   ==================================================================================

Attribute                                                                                                                   Summary

==============================================   ==================================================================================
:ref:`mesh <mesh_2>`                                                                                                  'mesh' child.

:ref:`contour <contour>`                                                                                           'contour' child.

:ref:`vector <vector_1>`                                                                                            'vector' child.

:ref:`pathline <pathline>`                                                                                        'pathline' child.

:ref:`particle_track <particle_track>`                                                                      'particle_track' child.

:ref:`lic <lic>`                                                                                                       'lic' child.

:ref:`olic <olic>`                                                                                                    'olic' child.

:ref:`volumes <volumes_2>`                                                                                         'volumes' child.

:ref:`contours <contours>`                                                                                        'contours' child.

:ref:`particle_tracks <particle_tracks>`                                                                   'particle_tracks' child.

:ref:`colors <colors>`                                                                                              'colors' child.

:ref:`lighting <lighting>`                                                                                        'lighting' child.

:ref:`picture <picture>`                                                              Enter the hardcopy/save-picture options menu.

:ref:`views <views>`                                                                                                 'views' child.

:ref:`windows <windows>`                                                                                           'windows' child.

:ref:`raytracing_options <raytracing_options>`                                                          'raytracing_options' child.

:ref:`pulse <pulse>`                                                                Enter save pathline/particle tracks pulse menu.

:ref:`periodic_instances <periodic_instances>`       Periodic instance objects are used to specify periodic repetition of surfaces.

:ref:`display <display_6>`                                                                                         'display' child.

==============================================   ==================================================================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`results <results>`       'results' child.

========================   ====================

